added intel optimized machine learning and deep learning based classifiers

--- a/modelling/EDA.ipynb
+++ b/modelling/EDA.ipynb
@@ -18,7 +18,7 @@
       "outputs": [],
       "source": [
         "#@title File paths definition\n",
-        "FILE_PATH = r\"C:\\Users\\Ramesh Babu\\BuzzOnEarth\\datasets\\processed\\all_city_data_with_pop.csv\"\n",
+        "FILE_PATH = r\"BuzzOnEarth\\datasets\\processed\\all_city_data_with_pop.csv\"\n",
         "\n",
         "ev_image_path = \"map_images/ev.jpg\"\n",
         "restaurant_image_path = \"map_images/restaurants.png\"\n",
